scrollbar isseuse fixed

--- a/src/assets/scss/admin.scss
+++ b/src/assets/scss/admin.scss
@@ -25,26 +25,25 @@
   }
   .admin-table {
     ::-webkit-scrollbar {
-      height: 30px;
-    }
+        height: 30px;
+      }
+      
+      ::-webkit-scrollbar-track {
+        background: #e0e0e0;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+      }
 
-    ::-webkit-scrollbar-track {
-      background: #e0e0e0;
-      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-      padding: 10px
-    }
+      ::-webkit-scrollbar-thumb {
+        background: #ffffff;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        margin: 10px;
+      }
 
-    ::-webkit-scrollbar-thumb {
-      height: 10px;
-      background: #ffffff;
-      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #bbb6b6;
-    }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #bbb6b6;
+      }
     .table-title {
       color: #78baf3;
       font-size: 16px;
@@ -57,6 +56,7 @@
       background-color: white;
       border-radius: 10px;
       box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+      
       ul {
         display: flex;
         flex-direction: row;
@@ -82,6 +82,7 @@
         display: none;
       }
       table {
+        margin-bottom: 10px;
         tr {
           .table-border {
             text-align: center;
