--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -1,5 +1,3 @@
-
-
 @media (max-width: 576px) {
   .footer {
     .footer-first {
@@ -85,20 +83,6 @@
       .container {
         padding: 0;
         .admin-navigation {
-          // ul {
-          //   margin-top: 0;
-          //   display: flex;
-          //   flex-direction: column;
-          //   justify-content: center;
-          //   background: #000000;
-          //   opacity: 0.8;
-          //   padding: 10px 0;
-          //   li {
-          //     margin-top: 5px;
-          //     height: 50px;
-          //     width: 268px;
-          //   }
-          // }
           display: none;
         }
         .admin-table {
@@ -107,7 +91,6 @@
             position: relative;
             div {
               overflow-x: auto;
-              display: block;
               ul {
                 display: none;
               }
@@ -122,7 +105,6 @@
                 border-radius: 20px;
                 outline: none;
                 position: relative;
-
               }
               table {
                 width: 1100px;
@@ -136,6 +118,18 @@
               h5 {
                 position: absolute;
                 left: 20px;
+              }
+
+              .btn-default {
+                position: absolute;
+                width: 277px;
+                height: 50px;
+                left: 246px;
+                top: 523px;
+
+                background: linear-gradient(180deg, #222d44 0%, #4e5e80 100%);
+                box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+                border-radius: 30px;
               }
             }
           }
